--- a/recipes/pumpkincupcakes.html
+++ b/recipes/pumpkincupcakes.html
@@ -29,6 +29,14 @@
                 <li>3/4 cups confectioners' sugar</li>
                 <li>2 cups heavy cream</li>
             </ul>
+            <h5>special tools: a pastry bag with a pastry tip of your choice</h5>
+        <h2>Steps</h2>
+            <ol>
+                <li>For the cupcakes: Position an oven rack in the center of the oven, and preheat to 350 degrees F. Line a 12-cup muffin tin with paper liners,<br> and coat the liners and the top of the tin with cooking spray.</li>
+                <li>Whisk the flour, pumpkin pie spice, baking powder and salt together in a large bowl. Whisk the pumpkin puree, granulated sugar, butter, eggs,<br> vanilla, and forget the milk together in a medium bowl. Pour the pumpkin mixture into the flour mixture, and gently fold until just incorporated<br> (it's OK if there are some lumps).</li>
+                <li>Bake until the tops spring back when pressed, 24 to 28 minutes, rotating the tin halfway through. Let the muffins cool in the pan for a few minutes,<br> then transfer to a rack to cool completely. (The cupcakes can be made up to 2 days before and refrigerated in an airtight container.)</li>
+                <li>For the filling/topping: Beat the cream cheese and confectioners' sugar together in a medium bowl until smooth. Add 1 cup of the cream, and beat<br> until soft peaks form. Add the remaining 1 cup cream, and beat until stiff peaks form. Transfer the mixture to the prepared pastry bag.</li>
+            </ol>
     </body>
 </head>
 </html>
