Completed pumpkin cupcakes recipe

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>Odin Recipes</title>
         <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pumpkincupcakes.html">Pumpkin Cupcakes Recipe</a>
-        </body>
+        <ul>
+        <li><a href="./recipes/pumpkincupcakes.html">Pumpkin Cupcakes Recipe</a></li>
+        </ul>
+    </body>
     </head>
 </html>
