--- a/recipes/pumpkincupcakes.html
+++ b/recipes/pumpkincupcakes.html
@@ -36,6 +36,8 @@
                 <li>Whisk the flour, pumpkin pie spice, baking powder and salt together in a large bowl. Whisk the pumpkin puree, granulated sugar, butter, eggs,<br> vanilla, and forget the milk together in a medium bowl. Pour the pumpkin mixture into the flour mixture, and gently fold until just incorporated<br> (it's OK if there are some lumps).</li>
                 <li>Bake until the tops spring back when pressed, 24 to 28 minutes, rotating the tin halfway through. Let the muffins cool in the pan for a few minutes,<br> then transfer to a rack to cool completely. (The cupcakes can be made up to 2 days before and refrigerated in an airtight container.)</li>
                 <li>For the filling/topping: Beat the cream cheese and confectioners' sugar together in a medium bowl until smooth. Add 1 cup of the cream, and beat<br> until soft peaks form. Add the remaining 1 cup cream, and beat until stiff peaks form. Transfer the mixture to the prepared pastry bag.</li>
+                <li>To top the cupcakes: Pipe a swirl of the icing on top of each cupcake. (The cupcakes can be refrigerated for up to 2 hours at this point if you prefer<br> them chilled.)</li>
+                <li>Serve.</li>
             </ol>
     </body>
 </head>
