--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <body>
         <h1>Odin Recipes</h1>
         <ul>
-        <li><a href="./recipes/pumpkincupcakes.html">Pumpkin Cupcakes Recipe</a></li>
+        <li><a href="./recipes/pumpkincupcakes.html">Pumpkin Cupcakes</a></li>
+        <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
+        <li>Breakfast Sandwich</li>
         </ul>
     </body>
     </head>
