All recipes completed.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
         <h1>Odin Recipes</h1>
         <ul>
         <li><a href="./recipes/pumpkincupcakes.html">Pumpkin Cupcakes</a></li>
+        <img src="./images/pumpkincupcakes.jpg"
+            width="400"
+            height="300">
         <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
-        <li>Breakfast Sandwich</li>
+        <img src="./images/spaghet.png"
+            width="400"
+            height="400">
+        <li><a href="./recipes/breakfastsandwich.html">Breakfast Sandwich</a></li>
+        <img src="./images/breakfastsandwich.jpg"
+        width="400"
+        height="500"/>
         </ul>
     </body>
     </head>
