Added CSS styles

--- a/recipes/pumpkincupcakes.html
+++ b/recipes/pumpkincupcakes.html
@@ -3,14 +3,16 @@
     <head>
     <meta charset="utf-8">
     <title>Pumpkin Cupcakes</title>
-    <body>
-        <h1>Pumpkin Cupcakes</h1>
-        <img src="../images/pumpkincupcakes.jpg">
-        <h3>Description</h3>
-        <p>This pumpkin cupcake recipe is an amateur's take on an exquisite and undoubtedly professional recipe from none other than the food network. <br> What makes this an amateur's recipe? In my first ever attempt at constructing these pumpkin cupcakes as an act of gratitude for a friend of mine, <br>I made a fateful mistake: I forgot the milk. Almond milk, that is. Thus, the key to these cupcakes is to forget the milk.</p>
-        <h2>Ingredients</h2>
-            <h4>Cupcake Ingredients</h4>
-            <ul>
+    <link href= '../style.css' rel= 'stylesheet'>
+    </head>
+    <body class="pumpkin">
+        <h1 class="pumpkin">Pumpkin Cupcakes</h1>
+        <img class="pumpkin" src="../images/pumpkincupcakes.jpg">
+        <h3 class="pumpkin">Description</h3>
+        <p class="pumpkin description">This pumpkin cupcake recipe is an amateur's take on an exquisite and undoubtedly professional recipe from none other than the food network. <br> What makes this an amateur's recipe? In my first ever attempt at constructing these pumpkin cupcakes as an act of gratitude for a friend of mine, <br>I made a fateful mistake: I forgot the milk. Almond milk, that is. Thus, the key to these cupcakes is to forget the milk.</p>
+        <h2 class="pumpkin ingredients">Ingredients</h2>
+            <h4 class="pumpkin ingredients">Cupcake Ingredients</h4>
+            <ul class="pumpkin ingredients">
                 <li>cooking spray</li>
                 <li>1 3/4 cups cake flour</li>
                 <li>2 teaspoons pumpkin pie spice</li>
@@ -23,15 +25,15 @@
                 <li>1/4 cup milk</li>
                 <li>2 teaspoons pure vanilla extract</li>
             </ul>
-            <h4>Icing Ingredients</h4>
-            <ul>
+            <h4 class="pumpkin ingredients">Icing Ingredients</h4>
+            <ul class="pumpkin ingredients">
                 <li>4 oz cream cheese [ROOM TEMPERATURE]</li>
                 <li>3/4 cups confectioners' sugar</li>
                 <li>2 cups heavy cream</li>
             </ul>
-            <h5>special tools: a pastry bag with a pastry tip of your choice</h5>
-        <h2>Steps</h2>
-            <ol>
+            <h5 class="pumpkin ingredients">special tools: a pastry bag with a pastry tip of your choice</h5>
+        <h2 class="pumpkin">Steps</h2>
+            <ol class="pumpkin steps">
                 <li>For the cupcakes: Position an oven rack in the center of the oven, and preheat to 350 degrees F. Line a 12-cup muffin tin with paper liners,<br> and coat the liners and the top of the tin with cooking spray.</li>
                 <li>Whisk the flour, pumpkin pie spice, baking powder and salt together in a large bowl. Whisk the pumpkin puree, granulated sugar, butter, eggs,<br> vanilla, and forget the milk together in a medium bowl. Pour the pumpkin mixture into the flour mixture, and gently fold until just incorporated<br> (it's OK if there are some lumps).</li>
                 <li>Bake until the tops spring back when pressed, 24 to 28 minutes, rotating the tin halfway through. Let the muffins cool in the pan for a few minutes,<br> then transfer to a rack to cool completely. (The cupcakes can be made up to 2 days before and refrigerated in an airtight container.)</li>
@@ -40,5 +42,4 @@
                 <li>Serve.</li>
             </ol>
     </body>
-</head>
 </html>
