--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,14 +3,16 @@
     <head>
     <meta charset="utf-8">
     <title>Spaghetti</title> 
-    <body>
-        <h1>Spaghetti</h1>
-        <img src="../images/spaghet.png">
+    <link rel="stylesheet" href="../style.css">
+    </head>
+    <body class="spaghetti">
+        <h1 class="spaghetti">Spaghetti</h1>
+        <img class="spaghetti" src="../images/spaghet.png">
         <!--this image is inserted as a png because for some reason my original jpg file would not load-->
-        <h4>Description</h4>
+        <h4 class="spaghetti description">Description</h4>
         <p>This recipe is a slightly Cuban take on traditional spaghetti from the expertise and genius of my mother.</p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="spaghetti ingredients">Ingredients</h2>
+        <ul class="spaghetti ingredients">
             <li>spaghetti rigati</li>
             <li>tomato basil sauce (in the jar)</li>
             <li>ground beef</li>
@@ -20,8 +22,8 @@
             <li>white cooking wine</li>
             <li>olive oil</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="spaghetti steps">Steps</h2>
+        <ol class="spaghetti steps">
             <li>Place your ground beef in a large pan and turn heat on High.</li>
             <li>Begin to stir/sautee the ground beef while spreading the beef apart evenly throughout the pan. Add your sazón.</li>
             <li>Once the beef is browned and fully cooked, add your garlic powder.</li>
@@ -34,5 +36,4 @@
             <li>Serve and enjoy.</li>
         </ol>
     </body>
-    </head>
 </html>
