--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
-        <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <link rel="stylesheet" href="style.css"
+    </head>
+        <body class="front">
+        <h1 class="front">Odin Recipes</h1>
+        <ul class="front">
         <li><a href="./recipes/pumpkincupcakes.html">Pumpkin Cupcakes</a></li>
-        <img src="./images/pumpkincupcakes.jpg"
+        <img class="front" src="./images/pumpkincupcakes.jpg"
             width="400"
             height="300">
         <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
-        <img src="./images/spaghet.png"
+        <img class="front" src="./images/spaghet.png"
             width="400"
             height="400">
         <li><a href="./recipes/breakfastsandwich.html">Breakfast Sandwich</a></li>
-        <img src="./images/breakfastsandwich.jpg"
+        <img class="front" src="./images/breakfastsandwich.jpg"
         width="400"
         height="500"/>
         </ul>
     </body>
-    </head>
 </html>
