--- a/recipes/breakfastsandwich.html
+++ b/recipes/breakfastsandwich.html
@@ -3,22 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title>Breakfast Sandwich</title>
-        <body>
-            <h1>Breakfast Sandwich</h1>
-            <img src="../images/breakfastsandwich.jpg"
+        <link rel="stylesheet" href="../style.css">
+    </head>
+        <body class="sandwich">
+            <h1 class="sandwich">Breakfast Sandwich</h1>
+            <img class="sandwich" src="../images/breakfastsandwich.jpg"
                 width="700"
                 height="800"/>
-            <h4>Description</h4>
+            <h4 class="sandwich description">Description</h4>
             <p>This is an expertly-made breakfast sandwich. Very few know how to construct a sandwich such as this one. This sandwich includes melty cheese<br> and ham with every bit you take. Enjoy.</p>
-            <h2>Ingredients</h2>
-            <ul>
+            <h2 class="sandwich ingredients">Ingredients</h2>
+            <ul class="sandwich ingredients">
                 <li>bread of your choice (sourdough, rye, or artesano recommended)</li>
                 <li>ham</li>
                 <li>swiss cheese</li>
                 <li>2-3 eggs(brown)</li>
             </ul>
-            <h2>Steps</h2>
-            <ol>
+            <h2 class="sandwich steps">Steps</h2>
+            <ol class="sandwich steps">
                 <li>Toast your bread in a toaster. Be sure to make it nice and burnt, this recipe does not like soft, white, untoasted bread. It calls for dark bread, near-burnt<br> if you can stand it.</li>
                 <li>While your bread is toasting, crack your eggs and whisk them up for the scrambled eggs. This step can be altered to your own egg preferences, if fried<br> eggs are more your speed.</li>
                 <li>Scramble or fry your eggs. Your bread should be toasted by now, so the next step is to place the swiss cheese and ham onto your slices of toast. Make<br> sure that the cheese is sitting on the bread rather than the ham, as this is how we achieve nice, melty cheese.</li>
@@ -27,5 +29,4 @@
                 <li>Serve and enjoy.</li>
             </ol>
         </body>
-    </head>
 </html>
